# carrers-website-demo-v2

./: .replit  LICENSE  README.md  app.py  database.py  pyproject.toml  replit.nix  requirements.txt  send_email.py
templates/: application_form.html  application_submitted.html  banner.html  bootstrap.html  footer.html  home.html  jobitem.html  jobpage.html  nav.html
