[tool.poetry]
name = "repl-nix-carrers-website-demo"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_nix_carrers_website_demo"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
psycopg2-binary = "2.9.9"
sqlalchemy = "^2.0.31"
werkzeug = "3.0.3"
mailjet-rest = "1.3.4"
flask-hcaptcha = "0.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
